fixed alignment of privacy and terms of services

--- a/css/main.css
+++ b/css/main.css
@@ -46,3 +46,10 @@ button a {
     padding: 10px;
     font-size: 0.75rem;
 }
+.terms-privacy {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-between;
+}
+
